--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,14 +1,16 @@
 body {
     margin: 0;
     padding: 0;
-    background: rgb(33, 10, 30);
-    background: -moz-linear-gradient(left, rgba(93, 29, 96, 1) 0%, rgba(40, 71, 19, 1) 45%, rgba(20, 28, 6, 1) 100%);
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(33, 10, 30, 1)), color-stop(45%, rgba(40, 71, 19, 1)), color-stop(100%, rgba(20, 28, 6, 1)));
-    background: -webkit-linear-gradient(left, rgba(33, 10, 30, 1) 0%, rgba(40, 71, 19, 1) 45%, rgba(20, 28, 6, 1) 100%);
-    background: -o-linear-gradient(left, rgba(33, 10, 30, 1) 0%, rgba(40, 71, 19, 1) 45%, rgba(20, 28, 6, 1) 100%);
-    background: -ms-linear-gradient(left, rgba(33, 10, 30, 1) 0%, rgba(40, 71, 19, 1) 45%, rgba(20, 28, 6, 1) 100%);
-    background: linear-gradient(to right, rgba(33, 10, 30, 1) 0%, rgba(40, 71, 19, 1) 45%, rgba(20, 28, 6, 1) 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#210a1e', endColorstr='#141c06', GradientType=1);
+background: rgb(58,7,57);
+background: -moz-linear-gradient(left,  rgba(58,7,57,1) 8%, rgba(24,107,0,1) 39%, rgba(52,109,0,1) 77%, rgba(0,158,7,1) 100%);
+background: -webkit-gradient(linear, left top, right top, color-stop(8%,rgba(58,7,57,1)), color-stop(39%,rgba(24,107,0,1)), color-stop(77%,rgba(52,109,0,1)), color-stop(100%,rgba(0,158,7,1)));
+background: -webkit-linear-gradient(left,  rgba(58,7,57,1) 8%,rgba(24,107,0,1) 39%,rgba(52,109,0,1) 77%,rgba(0,158,7,1) 100%);
+background: -o-linear-gradient(left,  rgba(58,7,57,1) 8%,rgba(24,107,0,1) 39%,rgba(52,109,0,1) 77%,rgba(0,158,7,1) 100%);
+background: -ms-linear-gradient(left,  rgba(58,7,57,1) 8%,rgba(24,107,0,1) 39%,rgba(52,109,0,1) 77%,rgba(0,158,7,1) 100%);
+background: linear-gradient(to right,  rgba(58,7,57,1) 8%,rgba(24,107,0,1) 39%,rgba(52,109,0,1) 77%,rgba(0,158,7,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3a0739', endColorstr='#009e07',GradientType=1 );
+
+
     color: #eaeaea;
     font: 16px;
     line-height: 1.5;
@@ -38,14 +40,14 @@ body {
     border: 1px thin;
     border-radius: 30px;
     border-color: transparent;
-    background: rgb(51, 114, 47);
-    background: -moz-linear-gradient(-45deg, rgba(51, 114, 47, 1) 14%, rgba(38, 31, 135, 1) 25%, rgba(38, 94, 47, 1) 58%, rgba(181, 191, 43, 1) 71%, rgba(59, 142, 58, 1) 80%, rgba(46, 42, 183, 1) 100%);
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(14%, rgba(51, 114, 47, 1)), color-stop(25%, rgba(38, 31, 135, 1)), color-stop(58%, rgba(38, 94, 47, 1)), color-stop(71%, rgba(181, 191, 43, 1)), color-stop(80%, rgba(59, 142, 58, 1)), color-stop(100%, rgba(46, 42, 183, 1)));
-    background: -webkit-linear-gradient(-45deg, rgba(51, 114, 47, 1) 14%, rgba(38, 31, 135, 1) 25%, rgba(38, 94, 47, 1) 58%, rgba(181, 191, 43, 1) 71%, rgba(59, 142, 58, 1) 80%, rgba(46, 42, 183, 1) 100%);
-    background: -o-linear-gradient(-45deg, rgba(51, 114, 47, 1) 14%, rgba(38, 31, 135, 1) 25%, rgba(38, 94, 47, 1) 58%, rgba(181, 191, 43, 1) 71%, rgba(59, 142, 58, 1) 80%, rgba(46, 42, 183, 1) 100%);
-    background: -ms-linear-gradient(-45deg, rgba(51, 114, 47, 1) 14%, rgba(38, 31, 135, 1) 25%, rgba(38, 94, 47, 1) 58%, rgba(181, 191, 43, 1) 71%, rgba(59, 142, 58, 1) 80%, rgba(46, 42, 183, 1) 100%);
-    background: linear-gradient(135deg, rgba(51, 114, 47, 1) 14%, rgba(38, 31, 135, 1) 25%, rgba(38, 94, 47, 1) 58%, rgba(181, 191, 43, 1) 71%, rgba(59, 142, 58, 1) 80%, rgba(46, 42, 183, 1) 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#33722f', endColorstr='#2e2ab7', GradientType=1);
+background: -moz-linear-gradient(-45deg,  rgba(88,39,96,1) 0%, rgba(88,39,96,0.99) 9%, rgba(12,109,0,0.94) 41%, rgba(102,13,79,0.91) 64%, rgba(40,127,13,0.89) 74%, rgba(27,150,0,0.9) 76%, rgba(58,7,57,0.95) 87%, rgba(0,158,7,1) 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(88,39,96,1)), color-stop(9%,rgba(88,39,96,0.99)), color-stop(41%,rgba(12,109,0,0.94)), color-stop(64%,rgba(102,13,79,0.91)), color-stop(74%,rgba(40,127,13,0.89)), color-stop(76%,rgba(27,150,0,0.9)), color-stop(87%,rgba(58,7,57,0.95)), color-stop(100%,rgba(0,158,7,1)));
+background: -webkit-linear-gradient(-45deg,  rgba(88,39,96,1) 0%,rgba(88,39,96,0.99) 9%,rgba(12,109,0,0.94) 41%,rgba(102,13,79,0.91) 64%,rgba(40,127,13,0.89) 74%,rgba(27,150,0,0.9) 76%,rgba(58,7,57,0.95) 87%,rgba(0,158,7,1) 100%);
+background: -o-linear-gradient(-45deg,  rgba(88,39,96,1) 0%,rgba(88,39,96,0.99) 9%,rgba(12,109,0,0.94) 41%,rgba(102,13,79,0.91) 64%,rgba(40,127,13,0.89) 74%,rgba(27,150,0,0.9) 76%,rgba(58,7,57,0.95) 87%,rgba(0,158,7,1) 100%);
+background: -ms-linear-gradient(-45deg,  rgba(88,39,96,1) 0%,rgba(88,39,96,0.99) 9%,rgba(12,109,0,0.94) 41%,rgba(102,13,79,0.91) 64%,rgba(40,127,13,0.89) 74%,rgba(27,150,0,0.9) 76%,rgba(58,7,57,0.95) 87%,rgba(0,158,7,1) 100%);
+background: linear-gradient(135deg,  rgba(88,39,96,1) 0%,rgba(88,39,96,0.99) 9%,rgba(12,109,0,0.94) 41%,rgba(102,13,79,0.91) 64%,rgba(40,127,13,0.89) 74%,rgba(27,150,0,0.9) 76%,rgba(58,7,57,0.95) 87%,rgba(0,158,7,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#582760', endColorstr='#009e07',GradientType=1 );
+
 }
 #showContent {
     width: auto;
@@ -85,6 +87,7 @@ body {
     position: absolute;
     float: left;
     height: 100%;
+    max-width: 17%;
     /* border: 2px solid; */
 }
 #top {
@@ -94,7 +97,7 @@ body {
     float:bottom;
 }
 #toc {
-    left: 2%;
+    margin-left: 2%;
 }
 #toc ul li a {
     /*list-style: none; */
@@ -375,13 +378,14 @@ hr {
 
 .btn {
     display: inline-block;
-    background: -moz-linear-gradient(-45deg, rgba(93, 29, 96, 1) 0%, rgba(23, 25, 147, 0.8) 41%, rgba(34, 23, 139, 0.77) 47%, rgba(74, 17, 109, 0.87) 69%, rgba(54, 96, 52, 0.91) 78%, rgba(54, 96, 52, 1) 100%);
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(93, 29, 96, 1)), color-stop(41%, rgba(23, 25, 147, 0.8)), color-stop(47%, rgba(34, 23, 139, 0.77)), color-stop(69%, rgba(74, 17, 109, 0.87)), color-stop(78%, rgba(54, 96, 52, 0.91)), color-stop(100%, rgba(54, 96, 52, 1)));
-    background: -webkit-linear-gradient(-45deg, rgba(93, 29, 96, 1) 0%, rgba(23, 25, 147, 0.8) 41%, rgba(34, 23, 139, 0.77) 47%, rgba(74, 17, 109, 0.87) 69%, rgba(54, 96, 52, 0.91) 78%, rgba(54, 96, 52, 1) 100%);
-    background: -o-linear-gradient(-45deg, rgba(93, 29, 96, 1) 0%, rgba(23, 25, 147, 0.8) 41%, rgba(34, 23, 139, 0.77) 47%, rgba(74, 17, 109, 0.87) 69%, rgba(54, 96, 52, 0.91) 78%, rgba(54, 96, 52, 1) 100%);
-    background: -ms-linear-gradient(-45deg, rgba(93, 29, 96, 1) 0%, rgba(23, 25, 147, 0.8) 41%, rgba(34, 23, 139, 0.77) 47%, rgba(74, 17, 109, 0.87) 69%, rgba(54, 96, 52, 0.91) 78%, rgba(54, 96, 52, 1) 100%);
-    background: linear-gradient(135deg, rgba(93, 29, 96, 1) 0%, rgba(23, 25, 147, 0.8) 41%, rgba(34, 23, 139, 0.77) 47%, rgba(74, 17, 109, 0.87) 69%, rgba(54, 96, 52, 0.91) 78%, rgba(54, 96, 52, 1) 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#5d1d60', endColorstr='#366034', GradientType=1);
+background: -moz-linear-gradient(-45deg,  rgba(57,63,140,1) 0%, rgba(57,63,140,0.96) 9%, rgba(29,144,10,0.89) 22%, rgba(27,150,0,0.89) 23%, rgba(110,0,114,0.89) 41%, rgba(27,150,0,0.89) 65%, rgba(67,77,42,0.89) 74%, rgba(102,13,79,0.92) 82%, rgba(0,158,7,1) 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(57,63,140,1)), color-stop(9%,rgba(57,63,140,0.96)), color-stop(22%,rgba(29,144,10,0.89)), color-stop(23%,rgba(27,150,0,0.89)), color-stop(41%,rgba(110,0,114,0.89)), color-stop(65%,rgba(27,150,0,0.89)), color-stop(74%,rgba(67,77,42,0.89)), color-stop(82%,rgba(102,13,79,0.92)), color-stop(100%,rgba(0,158,7,1)));
+background: -webkit-linear-gradient(-45deg,  rgba(57,63,140,1) 0%,rgba(57,63,140,0.96) 9%,rgba(29,144,10,0.89) 22%,rgba(27,150,0,0.89) 23%,rgba(110,0,114,0.89) 41%,rgba(27,150,0,0.89) 65%,rgba(67,77,42,0.89) 74%,rgba(102,13,79,0.92) 82%,rgba(0,158,7,1) 100%);
+background: -o-linear-gradient(-45deg,  rgba(57,63,140,1) 0%,rgba(57,63,140,0.96) 9%,rgba(29,144,10,0.89) 22%,rgba(27,150,0,0.89) 23%,rgba(110,0,114,0.89) 41%,rgba(27,150,0,0.89) 65%,rgba(67,77,42,0.89) 74%,rgba(102,13,79,0.92) 82%,rgba(0,158,7,1) 100%);
+background: -ms-linear-gradient(-45deg,  rgba(57,63,140,1) 0%,rgba(57,63,140,0.96) 9%,rgba(29,144,10,0.89) 22%,rgba(27,150,0,0.89) 23%,rgba(110,0,114,0.89) 41%,rgba(27,150,0,0.89) 65%,rgba(67,77,42,0.89) 74%,rgba(102,13,79,0.92) 82%,rgba(0,158,7,1) 100%);
+background: linear-gradient(135deg,  rgba(57,63,140,1) 0%,rgba(57,63,140,0.96) 9%,rgba(29,144,10,0.89) 22%,rgba(27,150,0,0.89) 23%,rgba(110,0,114,0.89) 41%,rgba(27,150,0,0.89) 65%,rgba(67,77,42,0.89) 74%,rgba(102,13,79,0.92) 82%,rgba(0,158,7,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#393f8c', endColorstr='#009e07',GradientType=1 );
+
     padding: 8px 12px;
     margin-left: 6px;
     border-radius: 50px;
