--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -80,8 +80,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#582760', end
 }
 #onTopImg:hover {
     animation: bounceit 3s infinite linear;
-    -webkit-filter: brightness(200%);
-    filter: brightness(200%);
+    -webkit-animation: bounceit 3s infinite linear;
 }
 #scroller {
     position: absolute;
@@ -100,28 +99,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#582760', end
     margin-left: 2%;
 }
 #toc ul li a {
-    /*list-style: none; */
-    /* list-style-type: none; */
-    /* padding:0;
-    margin:0;*/
     color: green;
     width: auto;
     max-width: 10%;
 }
 #toc ul li a:hover {
-    /*list-style: none; */
-    /* list-style-type: none; */
-    /* padding:0;
-    margin:0;*/
     color: blue;
-    /* animation: bounceit 1s infinite linear; */
 }
 #toc ul li:hover {
-    /*list-style: none; */
-    /* list-style-type: none; */
-    /* padding:0;
-    margin:0;*/
     color: blue;
+    -webkit-animation: bounceit 3s infinite linear;
     animation: bounceit 3s infinite linear;
 }
 #toc ul li:before {
@@ -159,6 +146,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#582760', end
     display: block !important;
     opacity: 1 !important;
     visibility: visible!important;
+    -webkit-animation: bounceit 1s;
     animation: bounceit 1s;
     transition: all 2s;
     transition-delay: 2s;
@@ -178,6 +166,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#582760', end
     }
     100% {
         transform: scale(1);
+    }
+}
+@-webkit-keyframes bounceit {
+    0% {
+        -webkit-transform: scale(1);
+    }
+    25% {
+        -webkit-transform: scale(.8);
+    }
+    50% {
+        -webkit-transform: scale(1);
+    }
+    75% {
+        -webkit-transform: scale(.9);
+    }
+    100% {
+        -webkit-transform: scale(1);
     }
 }
 .dropdowncontainer:before {
@@ -212,6 +217,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#582760', end
     -ms-filter: none;
     filter: none;
     cursor: pointer;
+    -webkit-animation: bounceImage 6s infinite linear;
     animation: bounceImage 6s infinite linear;
 }
 @keyframes bounceImage {
@@ -226,6 +232,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#582760', end
     }
     75% {
         transform: rotate(-10deg);
+    }
+}
+@-webkit-keyframes bounceImage {
+    0% {
+        -webkit-initial;
+    }
+    25% {
+        -webkit-transform: rotate(10deg);
+    }
+    50% {
+        -webkit-initial;
+    }
+    75% {
+        -webkit-transform: rotate(-10deg);
     }
 }
 #menucontent {} section {
@@ -408,6 +428,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#393f8c', end
     background: linear-gradient(45deg, #229114 0%, #00c600 17%, #322170 33%, #008a00 67%, #005700 83%, #002400 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#229114', endColorstr='#002400', GradientType=1);
     border-color: green;
+    animation: bounceit .3s linear;
+    -webkit-animation: bounceit .3s linear;
 }
 .btn .icon {
     display: inline-block;
@@ -437,20 +459,15 @@ a {
 .cf {
     zoom: 1;
 }
-# individual tooltips a.tooltip {
-    position: relative;
-    display: inline;
-}
+
 a.tooltip:after {
-    display: block;
     visibility: hidden;
     position: absolute;
-    top: 0;
+    top: 135px;
     left: 25%;
     opacity: 0;
     content: attr(data-tool);
     /* might also use attr(title) */
-    height: auto;
     /* min-width: 100px; */
     max-width: 100%;
     padding: 5px 8px;
@@ -458,20 +475,20 @@ a.tooltip:after {
     color: #fff;
     text-decoration: none;
     text-align: center;
-    font-size: : 60px;
-    background: rgba(0, 0, 0, 0.85);
+        background: #229114;
+    background: -moz-linear-gradient(45deg, #229114 0%, #00c600 17%, #322170 33%, #008a00 67%, #005700 83%, #002400 100%);
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #229114), color-stop(17%, #00c600), color-stop(33%, #322170), color-stop(67%, #008a00), color-stop(83%, #005700), color-stop(100%, #002400));
+    background: -webkit-linear-gradient(45deg, #229114 0%, #00c600 17%, #322170 33%, #008a00 67%, #005700 83%, #002400 100%);
+    background: -o-linear-gradient(45deg, #229114 0%, #00c600 17%, #322170 33%, #008a00 67%, #005700 83%, #002400 100%);
+    background: -ms-linear-gradient(45deg, #229114 0%, #00c600 17%, #322170 33%, #008a00 67%, #005700 83%, #002400 100%);
+    background: linear-gradient(45deg, #229114 0%, #00c600 17%, #322170 33%, #008a00 67%, #005700 83%, #002400 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#229114', endColorstr='#002400', GradientType=1);
+    border-color: green;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
-    transition: 3s slide;
 }
 a.tooltip:hover:after {
     visibility: visible;
     opacity: 1;
-    top: 135px;
-}
-a.tooltip:hover:before {
-    visibility: visible;
-    opacity: 1;
-    top: 54px;
 }
