fixing elements, which go out of the menubox.. mb dont need height anymore. + some cleanups

--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -15,7 +15,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#08070a', end
     color: black;
     font: 16px;
     line-height: 1.5;
-    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+    font-family: Monaco, "New Century Schoolbook", "Times";
 }
 /* General & 'Reset' Stuff */
 
@@ -32,9 +32,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#08070a', end
     width: auto;
     max-width: 60%;
     margin-left: 23%;
-    height: 85px;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 1px;
+    padding-right: 1px;
     padding-top: 8px;
     padding-bottom: 2px;
     text-shadow: 1px 1px 1px white;
@@ -57,13 +56,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d5b4a', end
     /* max-width: 600px; 
   margin: 0 auto;  */
     padding-left: 25%;
-    max-width: 50%;
+    max-width: 60%;
+    min-width: 30%;
+    z-index: 400;
 }
 #showContent img {
     border: 2px solid;
     border-radius: 30px;
     border-color: transparent;
     max-width: 50%;
+    
 }
 .submenu {
     padding: 0;
@@ -289,7 +291,7 @@ header h1 {
     /* margin: 0 0 0 -40px; */
     font-weight: bold;
     margin-left: 5px;
-    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+    font-family: Monaco, "New Century Schoolbook", "Times";
     color: white;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
     letter-spacing: -1px;
@@ -322,7 +324,7 @@ h4,
 h5,
 h6 {
     font-weight: normal;
-    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+    font-family: Monaco, "New Century Schoolbook", "Times";
     color: #e65c12;
     letter-spacing: -0.03em;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
@@ -359,7 +361,7 @@ ul li {
 }
 ul li:before {
     content: "=>";
-    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+    font-family: Monaco, "New Century Schoolbook", "Times";
     font-size: 20px;
     color: #black;
     margin-left: -37px;
@@ -367,7 +369,7 @@ ul li:before {
     line-height: 20px;
 }
 .arrowStyle {
-    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+    font-family: Monaco, "New Century Schoolbook", "Times";
     font-size: 13px;
     color: #b5e853;
     margin-left: -37px;
