--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -49,6 +49,38 @@ background: linear-gradient(135deg,  rgba(88,39,96,1) 0%,rgba(88,39,96,0.99) 9%,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#582760', endColorstr='#009e07',GradientType=1 );
 
 }
+.projectpic {
+    width: 50%;
+    height: 50%;
+}
+.gallerytable {
+    padding: 0;
+    margin:0;
+    max-width: 300%;
+}
+.gallerytablediv {
+ max-height: 450px; width: 100%;
+    overflow-x: scroll; 
+    overflow-y: hidden;
+}
+.gallerytable tr {
+    padding: 0; 
+    margin:0;
+    overflow-x: scroll; 
+    height: 400px;
+}
+.gallerytable tr td {
+
+    padding: 0; 
+    margin:0;
+    height: 400px;
+}
+
+.gallerytable tr td a img {
+    max-height: 350px;
+    padding: 0;
+    margin: 0;
+}
 #showContent {
     width: auto;
     /* max-width: 600px; 
@@ -62,7 +94,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#582760', end
     border: 2px solid;
     border-radius: 30px;
     border-color: transparent;
-    max-width: 50%;
+    max-width: 100%;
 }
 .submenu {
     padding: 0;
