--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -177,9 +177,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3baf5f44', e
     font: bold 12px/18px sans-serif;
     display: inline-block;
     position: relative;
-    /* padding: 5px 50px; */
-    padding-bottom: 5px;
-    padding-top: 5px;
     cursor: pointer;
     z-index: 555;
     transition-property: display;
@@ -544,7 +541,7 @@ a.tooltip:after {
     max-width: 100%;
     padding: 5px 8px;
     z-index: 999;
-    color: #fff;
+    color: yellow;
     text-decoration: none;
     text-align: center;
         background: #229114;
