--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -50,6 +50,12 @@ background: linear-gradient(135deg,  rgba(88,39,96,1) 0%,rgba(88,39,96,0.99) 9%,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#582760', endColorstr='#009e07',GradientType=1 );
 
 }
+
+.anchor {
+    top: -120px;
+    display: block; position: relative;
+}
+
 .projectpic {
     width: 50%;
     height: 50%;
