--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -413,11 +413,12 @@ ul li {
 ul li:before {
     content: "=>";
     font-family: Monaco, "New Century Schoolbook", "Times";
-    font-size: 20px;
+    font-size: 1.4;
     color: #black;
+    padding-top: 20px;
     margin-left: -37px;
     margin-right: 16px;
-    line-height: 20px;
+    line-height: 1.4;
 }
 .arrowStyle {
     font-family: Monaco, "New Century Schoolbook", "Times";
